# ntex-sqlx-todo

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20240401035418_todo_table.sql
src/: main.rs  todo.rs
src/todo/: create.rs  delete.rs  find.rs  get.rs  update.rs
